--- a/Medtracker/Resources/Styles/Colors.xaml
+++ b/Medtracker/Resources/Styles/Colors.xaml
@@ -4,19 +4,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
-//Background F1F7ED - mintcream
-    //Primary Dark - 243E36 - dark slate grey
-    //Primary 7CA982 - muted teal
-    //Secondary E0EEC6 - frosted mint
-    //Tertiary C2A83E - old gold.
+    <!-- Background F1F7ED - mintcream -->
+    <!-- Primary Dark - 243E36 - dark slate grey -->
+    <!-- Primary 7CA982 - muted teal -->
+    <!-- Secondary E0EEC6 - frosted mint -->
+    <!-- Tertiary C2A83E - old gold. -->
     
-    
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+    <Color x:Key="Primary">#7CA982</Color>
+    <Color x:Key="PrimaryDark">#243E36</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="SecondaryDarkText">#9880e5</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Secondary">#F1F7ED</Color>
+    <Color x:Key="SecondaryDarkText">#243E36</Color>
+    <Color x:Key="Tertiary">#C2A83E</Color>
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
