--- a/Medtracker/AppShell.xaml
+++ b/Medtracker/AppShell.xaml
@@ -5,11 +5,19 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Medtracker"
     Title="Medtracker">
+    
+    <Shell.TitleView>
+        <HorizontalStackLayout VerticalOptions="Center" HorizontalOptions="CenterAndExpand" Spacing="8">
 
+            <Image Source="medtrackerlogo.png" HeightRequest="40" Aspect="AspectFit"/>
+
+            <Label Text="MedTracker" FontSize="18" FontAttributes="Bold" VerticalOptions="Center"/>
+
+        </HorizontalStackLayout>
+    </Shell.TitleView>
     <ShellContent
         Title=""
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-    
 
 </Shell>
