--- a/Medtracker/ShowMedicationPage.xaml
+++ b/Medtracker/ShowMedicationPage.xaml
@@ -14,7 +14,7 @@
                         Margin="20,0">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <VerticalStackLayout Padding="10" Margin="0,5" BackgroundColor="#f0f0f0">
+                    <VerticalStackLayout Padding="10" Margin="0,5" BackgroundColor="#243E36">
                         <Label Text="{Binding Name}"
                                FontSize="Medium"
                                FontAttributes="Bold"/>
@@ -26,7 +26,7 @@
                         </HorizontalStackLayout>
                         <Label Text="{Binding Dosage, StringFormat='Dosage: {0}'}" FontSize="Small"/>
                         <Label Text="{Binding medicationType, StringFormat='Type: {0}'}" FontSize="Small"/>
-                        <BoxView HeightRequest="1" Color="LightGray" Margin="0,5,0,0"/>
+                        <BoxView HeightRequest="1" Color="Black"  Margin="0,5,0,0"/>
 
                     </VerticalStackLayout>
                 </DataTemplate>
