--- a/Medtracker/Pages/EditMedicationPage.xaml
+++ b/Medtracker/Pages/EditMedicationPage.xaml
@@ -1,42 +1,54 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:Medtracker.ViewModels"
              xmlns:sys="clr-namespace:System;assembly=netstandard"
-             x:Class="Medtracker.AddMedicationPage"
-             Title="Add Medication">
+             x:Class="Medtracker.Pages.EditMedicationPage"
+             Title="Edit MedicationPage">
     <ScrollView>
-    <VerticalStackLayout Padding="20" Spacing="15">
-        <Label 
-            Text="Enter medication info:" FontSize="Medium"/>
+        <VerticalStackLayout Padding="20" Spacing="15">
+            <Label Text="Medication ID:" FontSize="Medium"/>
+            <Label Text="{Binding CurrentMedication.MedID}" FontSize="Medium" FontAttributes="Bold"/>
+
+            <Label Text="Medication Name:" FontSize="Medium"/>
             <Entry Placeholder="Medication Name"
-               Text="{Binding NewMedication.Name}"/>
+                   Text="{Binding CurrentMedication.Name}"/>
+
             <Picker Title="Choose type.."
-                ItemsSource="{Binding AvailableMedicationTypes}" SelectedItem="{Binding SelectedMedicationType}" />
+                    ItemsSource="{Binding AvailableMedicationTypes}" 
+                    SelectedItem="{Binding SelectedMedicationType}" />
+
             <VerticalStackLayout Spacing="5" IsVisible="{Binding IsScopeInputVisible}">
                 <Label Text="Input calculated medicationscope (in days):"/>
                 <Entry Placeholder="30"
                        Keyboard="Numeric"
-                       Text="{Binding NewMedication.UserMedicationScope}"/>
+                       Text="{Binding CurrentMedication.UserMedicationScope}"/>
             </VerticalStackLayout>
+
             <Label Text="Medicine strength:" />
             <Entry Placeholder="Strength"
-                   Text="{Binding NewMedication.Strength}"
+                   Text="{Binding CurrentMedication.Strength}"
                    Keyboard="Numeric"/>
+
             <Label Text="Daily dosage" />
             <Entry Placeholder="Dosage"
-                   Text="{Binding NewMedication.Dosage}"
+                   Text="{Binding CurrentMedication.Dosage}"
                    Keyboard="Numeric"/>
+
             <Label Text="Total amount collected"/>
             <Entry Placeholder="Amount collected"
-                   Text="{Binding NewMedication.AmountCollected}" 
+                   Text="{Binding CurrentMedication.AmountCollected}" 
                    Keyboard="Numeric"/>
+
             <Label Text="Prescription Collected:"/>
             <DatePicker 
-                Date="{Binding NewMedication.PrescriptionCollected}"
+                Date="{Binding CurrentMedication.PrescriptionCollected}"
                 Format="yyyy-MM-dd"
                 MaximumDate="{x:Static sys:DateTime.Today}"
                 />
-            <Button Text="Save medication" Command="{Binding SaveCommand}"/>
+
+            <Button Text="Save Changes" Command="{Binding SaveChangesCommand}" BackgroundColor="{StaticResource Primary}"/>
+
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
